# open-sol-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Makefile  README.md  docker-compose.prod.yaml  docker-compose.yaml  environment.yml  example.config.toml  init-os-env.sh  pyproject.toml  requirements.txt
.github/workflows/: telegram-notifier.yaml
app/cache-preloader/: Dockerfile  README.md  pyproject.toml
app/cache-preloader/cache_preloader/: __init__.py  main.py
app/cache-preloader/cache_preloader/caches/: __init__.py  blockhash.py  min_balance_rent.py  raydium_pool.py
app/cache-preloader/cache_preloader/core/: __init__.py  base.py  protocols.py
app/cache-preloader/cache_preloader/services/: __init__.py  auto_update_service.py
app/tg-bot/: Dockerfile  pyproject.toml
app/tg-bot/tg_bot/: decorators.py  main.py  templates.py
app/tg-bot/tg_bot/conversations/: states.py
app/tg-bot/tg_bot/conversations/admin/: __init__.py  command.py
app/tg-bot/tg_bot/conversations/asset/: __init__.py  command.py  render.py  router.py
app/tg-bot/tg_bot/conversations/copytrade/: __init__.py  create.py  edit.py  tp_sl.py
app/tg-bot/tg_bot/conversations/home/: __init__.py  command.py  render.py  router.py
app/tg-bot/tg_bot/conversations/monitor/: __init__.py  command.py  create.py  edit.py  menu.py  render.py
app/tg-bot/tg_bot/conversations/setting/: __init__.py  command.py  menu.py  render.py  router.py  template.py
app/tg-bot/tg_bot/conversations/swap/: __init__.py  command.py  render.py  router.py  swap.py
app/tg-bot/tg_bot/conversations/wallet/: __init__.py  command.py  menu.py  render.py  router.py
app/tg-bot/tg_bot/keyboards/: __init__.py  common.py  copytrade.py  main_menu.py  monitor.py  notify_swap.py  setting.py  swap.py
app/tg-bot/tg_bot/middlewares/: __init__.py  authorization.py  debug.py  error_handler.py  initialize.py
app/tg-bot/tg_bot/models/: monitor.py
app/tg-bot/tg_bot/notify/: copytrade_trigger.py  notify.py  smart_swap.py  swap_result.py
app/tg-bot/tg_bot/services/: activation.py  copytrade.py  monitor.py  user.py
app/tg-bot/tg_bot/utils/: __init__.py  bot.py  message.py  setting.py  swap.py  text.py
app/trading/: Dockerfile  pyproject.toml
app/trading/trading/: copytrade.py  exceptions.py  executor.py  main.py  swap.py  tx.py  utils.py
app/trading/trading/settlement/: analyzer.py  processor.py
app/trading/trading/transaction/: __init__.py  base.py  factory.py  protocol.py  sender.py
app/trading/trading/transaction/builders/: base.py  gmgn.py  jupiter.py  meteora_dbc.py  pump.py  ray_v4.py
app/wallet-tracker/: Dockerfile  pyproject.toml
app/wallet-tracker/wallet_tracker/: constants.py  exceptions.py  main.py  tx_monitor.py  tx_worker.py  utils.py
app/wallet-tracker/wallet_tracker/benchmark/: __init__.py  decorator.py  service.py
app/wallet-tracker/wallet_tracker/geyser/: tx_subscriber.py
app/wallet-tracker/wallet_tracker/parser/: protocol.py  pump.py  raw_tx.py
app/wallet-tracker/wallet_tracker/wss/: account_log_monitor.py  tx_detail_fetcher.py  tx_subscriber.py
libs/cache/: pyproject.toml
libs/cache/cache/: __init__.py  account.py  account_amount.py  blockhash.py  cached.py  constants.py  launch.py  min_balance_rent.py  mint_account.py  rayidum.py  token_info.py  wallet.py
libs/cache/solbot_cache/: __init__.py  account.py  account_amount.py  blockhash.py  cached.py  launch.py  min_balance_rent.py  mint_account.py  rayidum.py  token_info.py  wallet.py
libs/common/: README.md  pyproject.toml
libs/common/common/: config.py  constants.py  log.py  prestart.py
libs/common/solbot_common/: constants.py  log.py  prestart.py  sentry.py
libs/db/: pyproject.toml
libs/db/db/: redis.py  session.py
libs/db/solbot_db/: redis.py  session.py
libs/services/: pyproject.toml
libs/services/services/: bot_setting.py  copytrade.py  holding.py
libs/services/solbot_services/: __init__.py  bot_setting.py  copytrade.py  holding.py
libs/yellowstone_grpc/: pyproject.toml
libs/yellowstone_grpc/yellowstone_grpc/: client.py  types.py
libs/yellowstone_grpc/yellowstone_grpc/grpc/: geyser_pb2.py  geyser_pb2.pyi  geyser_pb2_grpc.py  geyser_pb2_grpc.pyi  solana_storage_pb2.py  solana_storage_pb2.pyi  solana_storage_pb2_grpc.py
mysql/: init.sql
scripts/: update-version.py
src/cache/: __main__.py  account.py  account_amount.py  cached.py  main.py  token_info.py  wallet.py
src/cache/auto/: base.py  blockhash.py  min_balance_rent.py  raydium_pool.py
src/common/: config.py  log.py  sentry.py
src/common/IDL/: pumpfun.py
src/common/cp/: base.py  swap_event.py
src/common/layouts/: __init__.py  bonding_curve_account.py  clmm.py  cpmm.py  global_account.py  layouts.py  mint_account.py  token_account.py
src/common/models/: mint_account.py  new_token.py  swap_record.py
src/common/types/: __init__.py  swap.py  tx.py
src/db/: session.py
src/pump_monitor/: constants.py  main.py  new_token.py  store.py
src/tg_bot/: decorators.py  main.py  templates.py
src/trading/: copytrade.py  copytrade_processor.py  exceptions.py  executor.py  main.py  tx.py  utils.py
src/wallet_tracker/: __init__.py  exceptions.py  main.py  tx_monitor.py  tx_worker.py
src/yellowstone_grpc/: types.py
tests/: Photon Program + Pump.fun AMM.json  conftest.py  meteroadbc.json  test_config.py  test_helius.py  test_raydium_swap_builder.py  test_raydium_utils.py  test_utils.py  数据.json  数据2.json
tests/cache/: test_account_amount.py  test_blockhash.py  test_mint_account.py  test_rayv4.py
tests/cache_preloader/: __init__.py  test_auto_update_service.py  test_base_cache.py  test_blockhash_cache.py  test_main.py  test_min_balance_rent_cache.py  test_raydium_pool_cache.py
tests/common/: test_utils.py
tests/geyser_grpc/: test_client.py
tests/pump_monitor/: test_model_new_token.py
tests/trading/: test_pump.py  test_ray_v4.py  test_tx.py  test_utils.py
tests/utils/: test_pool.py
tests/wallet_tracker/: test_fetcher.py  test_parser.py  test_wallet_monitor.py
(+180 files in other folders)
