[project]
name = "open-sol-bot"
version = "0.1.9"
description = "Open Solana Trading Bot"
authors = [
    { name = "mkdir700", email = "mkdir700@gmail.com" },
]
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "solbot-cache",
    "solbot-cache-preloader",
    "solbot-common",
    "solbot-db",
    "solbot-services",
    "solbot-tgbot",
    "solbot-trading",
    "solbot-wallet-tracker",
    "solbot-yellowstone-grpc",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.uv.sources]
solbot-trading = { path = "app/trading", editable = true }
solbot-wallet-tracker = { path = "app/wallet-tracker", editable = true }
solbot-cache-preloader = { path = "app/cache-preloader", editable = true }
solbot-tgbot = { path = "app/tg-bot", editable = true }
solbot-cache = { path = "libs/cache", editable = true }
solbot-db = { path = "libs/db", editable = true }
solbot-services = { path = "libs/services", editable = true }
solbot-yellowstone-grpc = { path = "libs/yellowstone_grpc", editable = true }
solbot-common = { path = "libs/common", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pre-commit>=4.0.1",
    "jupyter>=1.1.1",
    "pytest-asyncio>=0.24.0",
    "pytest-xprocess==0.18.1",
    "py==1.10.0",
]
