[project]
name = "solbot-cache-preloader"
version = "0.1.0"
description = "Cache preloading service for Solana Trading Bot"
authors = [{ name = "mkdir700", email = "mkdir700@gmail.com" }]
dependencies = [
]
requires-python = "==3.10.*"
license = { text = "Apache-2.0" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
local = [
    "solbot-cache @ file:///${PROJECT_ROOT}/libs/cache",
    "solbot-db @ file:///${PROJECT_ROOT}/libs/db",
    "solbot-services @ file:///${PROJECT_ROOT}/libs/services",
    "solbot-common @ file:///${PROJECT_ROOT}/libs/common",
    "solbot-yellowstone-grpc @ file:///${PROJECT_ROOT}/libs/yellowstone_grpc",
]