[project]
name = "solbot-trading"
version = "0.1.9"
description = "Trading for Solana"
authors = [
    { name = "mkdir700", email = "mkdir700@gmail.com" },
]
dependencies = [
    # Solana 相关依赖
    "solana>=0.35.1",
    "solders>=0.21.0",
    "base58>=2.1.1",
    "anchorpy>=0.20.1",
    "solana-tx-parser>=0.0.1",

    # HTTP 客户端
    "httpx>=0.28.0",
    "aiohttp<3.11,>=3.9.0",

    # 数据库和缓存
    "aioredis[hiredis]>=2.0.1",
    "aiomysql>=0.2.0",
    "aiocache[redis]>=0.12.3",

    # 配置和序列化
    "pydantic-settings>=2.6.1",
    "pydantic-settings-toml>=0.2.0",
    "orjson>=3.10.11",
    "tomli>=2.1.0",

    # ORM
    "sqlmodel>=0.0.22",

    # 工具库
    "backoff>=2.2.1",
    "cryptography>=44.0.0",

    # gRPC 相关
    "grpcio>=1.68.1",
    "grpcio-tools>=1.68.1",
    "grpcio-health-checking>=1.68.1",

    # Jupiter DEX SDK
    "jupiter-python-sdk>=0.0.2.0",

    # 监控
    "sentry-sdk>=2.21.0",
]
requires-python = "==3.10.*"
license = { text = "Apache-2.0" }

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
local = [
    "solbot-cache @ file:///${PROJECT_ROOT}/libs/cache",
    "solbot-db @ file:///${PROJECT_ROOT}/libs/db",
    "solbot-services @ file:///${PROJECT_ROOT}/libs/services",
    "solbot-common @ file:///${PROJECT_ROOT}/libs/common",
    "solbot-yellowstone-grpc @ file:///${PROJECT_ROOT}/libs/yellowstone_grpc",
]
