[project]
name = "solbot-db"
version = "0.2.1"
description = "Database utilities for Solana Trading Bot"
authors = [{ name = "mkdir700", email = "mkdir700@gmail.com" }]
dependencies = [
    "solbot-common",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.36",
]
requires-python = "==3.10.*"
license = { text = "Apache-2.0" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
