[project]
name = "solbot-services"
version = "0.1.9"
description = "Common services for Solana Trading Bot"
authors = [{ name = "mkdir700", email = "mkdir700@gmail.com" }]
dependencies = [
    "solbot-common",
    "solbot-db",
    "solbot-cache",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.36",
    "solana>=0.35.1",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "solders>=0.21.0",
    "base58>=2.1.1",
    "tomli>=2.1.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.6.1",
    "pydantic-settings-toml>=0.2.0",
    "orjson>=3.10.11",
    "aioredis[hiredis]>=2.0.1",
    "pymysql>=1.1.1",
    "anchorpy>=0.20.1",
    "backoff>=2.2.1",
    "solana-tx-parser>=0.0.1",
    "sentry-sdk>=2.21.0",
    "cryptography>=44.0.0",
    "grpcio>=1.68.1",
    "grpcio-tools>=1.68.1",
    "protobuf>=5.29.0",
    "grpcio-health-checking>=1.68.1",
    "aiogram>=3.15.0",
    "aiohttp<3.11,>=3.9.0",
    "jinja2>=3.1.4",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiomysql>=0.2.0",
    "jupiter-python-sdk>=0.0.2.0",
    "aiocache[redis]>=0.12.3",
]
requires-python = "==3.10.*"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"